[HHQ-2044] emulate java.ext.dirs to avoid ClassLoader issues with fixpack 11+